--- a/index.html
+++ b/index.html
@@ -7,5 +7,8 @@
   <body>
     <h1>Hello!</h1>
     <p>This is my personal website.</p>
+
+    <p><a href="about.html">About</a></p>
+    
   </body>
 </html>
