--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <p>This is my personal website.</p>
 
     <p><a href="about.html">About</a></p>
+
+    <p><a href="research.html">Research</a></p>
+
+    <p><a href="philosophy.html">Philosophy of Mathematics</a></p>
     
   </body>
 </html>
