--- a/research.html
+++ b/research.html
@@ -7,7 +7,7 @@
     <h1>Research</h1>
 
     <p>
-      Comment
+      Annotated Bibliography at the Intersection of Theology, Philosophy, and Mathematics
     </p>
 
     <p>
