--- a/philosophy.html
+++ b/philosophy.html
@@ -7,11 +7,19 @@
     <h1>Philosophy of Mathematics</h1>
 
     <p>
-      Comment
+      The Mystery of Every Moment
     </p>
 
     <p>
-      Comment
+      A Practical Guide to a Mathematical Study
+    </p>
+
+    <p>
+      Common Expressions of Mathematical Life
+    </p>
+
+    <p>
+      Common Expressions of Mathematical Life
     </p>
 
     <p>
