--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p><a href="research.html">Research</a></p>
 
     <p><a href="philosophy.html">Philosophy of Mathematics</a></p>
+
+    <p><a href="exercises.html">Exercises and Worksheets for Teaching Elementary Mathematics</a></p>
     
   </body>
 </html>
