--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
-<link rel="stylesheet" href="style.css">
-<html>
-  <head>
-    <title>My Website</title>
-  </head>
-  <body>
-    <h1>Hello!</h1>
-    <p>This is my personal website.</p>
+<html lang="en">
+  
+<head>
+  <meta charset="UTF-8">
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+  
+<body>
 
-    <p><a href="about.html">About</a></p>
+  <nav class="navbar">
+    <div class="logo">MySite</div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="philosophy.html">Philosophy</a></li>
+    </ul>
+  </nav>
 
-    <p><a href="research.html">Research</a></p>
+  <main>
+    <h1>Welcome to my site</h1>
+    <p>This is my GitHub Pages website.</p>
+  </main>
 
-    <p><a href="philosophy.html">Philosophy of Mathematics</a></p>
-
-    <p><a href="exercises.html">Exercises and Worksheets for Teaching Elementary Mathematics</a></p>
-    
-  </body>
+</body>
+  
 </html>
