--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
   <nav class="navbar">
-    <div class="logo">MySite</div>
+    <div class="simplelogo.png" /div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="research.html">Research</a></li>
