--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
 
   <nav class="navbar">
-    <div class="simplelogo.png" /div>
+    <div class="logo">
+    <img src="images/simplelogo.png" alt="MySite Logo">
+    </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="research.html">Research</a></li>
