--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <img src="images/simplelogo.png" alt="MySite Logo">
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="research.html">Research</a></li>
+      <li><a href="index.html">About</a></li>
       <li><a href="philosophy.html">Philosophy</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="teaching.html">Teaching</a></li>
     </ul>
   </nav>
 
