--- a/teaching.html
+++ b/teaching.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html>
+  
+  <head>
+    <title>Teaching</title>
+  </head>
+  
+  <body>
+    <p>
+      Proofs and Modern Mathematics
+    </p>
 
+    <p>
+      Calculus
+    </p>
+
+    <p>
+      Geometry
+    </p>
+
+    <p>
+      <a href="index.html">Back to home</a>
+    </p>
+  </body>
+</html>
