--- a/philosophy.html
+++ b/philosophy.html
@@ -3,6 +3,19 @@
   <head>
     <title>Philosophy of Mathematics</title>
   </head>
+
+<nav class="navbar">
+    <div class="logo">
+    <img src="images/simplelogo.png" alt="MySite Logo">
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">About</a></li>
+      <li><a href="philosophy.html">Philosophy</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="teaching.html">Teaching</a></li>
+    </ul>
+  </nav>
+  
   <body>
     <h1>Philosophy of Mathematics</h1>
 
