--- a/research.html
+++ b/research.html
@@ -4,6 +4,19 @@
     <title>Research</title>
   </head>
   <body>
+
+<nav class="navbar">
+    <div class="logo">
+    <img src="images/simplelogo.png" alt="MySite Logo">
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">About</a></li>
+      <li><a href="philosophy.html">Philosophy</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="teaching.html">Teaching</a></li>
+    </ul>
+  </nav>
+    
     <h1>Research</h1>
 
     <p>
