--- a/research.html
+++ b/research.html
@@ -19,16 +19,13 @@
     
     <h1>Research</h1>
 
-    <p>
-      Annotated Bibliography at the Intersection of Theology, Philosophy, and Mathematics
-    </p>
+    </h1>
+      Annotated bibliography at the intersection of theology, philosophy, mathematics, and culture
+    </h1>h1>
 
     <p>
       Comment
     </p>
 
-    <p>
-      <a href="index.html">Back to home</a>
-    </p>
   </body>
 </html>
