--- a/philosophy.html
+++ b/philosophy.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Philosophy of Mathematics</title>
-  </head>
-
-
   
+ <head>
+  <meta charset="UTF-8">
+  <title>My Website</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
   <body>
 
 <nav class="navbar">
