--- a/philosophy.html
+++ b/philosophy.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang=en>
   
 <head>
     <meta charset="UTF-8">
@@ -20,6 +20,8 @@
       <li><a href="teaching.html">Teaching</a></li>
     </ul>
   </nav>
+
+<main>
     
 <h1>Philosophy of Mathematics</h1>
 
@@ -39,5 +41,6 @@
       Common Expressions of Mathematical Life
     </p>
 
+  </main>
   </body>
 </html>
