--- a/philosophy.html
+++ b/philosophy.html
@@ -2,16 +2,16 @@
 <html lang="en">
   
 <head>
-    <meta charset="UTF-8">
-    <title>My Website</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <title>Philosophy Page</title>
+  <link rel="stylesheet" href="styles.css">
   </head>
 
 <body>
 
 <nav class="navbar">
     <div class="logo">
-    <img src="images/simplelogo.png" alt="MySite Logo">
+    <img src="images/simplelogo.png" alt=" ">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">About</a></li>
