--- a/philosophy.html
+++ b/philosophy.html
@@ -21,26 +21,10 @@
     </ul>
   </nav>
 
-<main>
-    
-<h1>Philosophy of Mathematics</h1>
-
-    <p>
-      The Mystery of Every Moment
-    </p>
-
-    <p>
-      A Practical Guide to a Mathematical Study
-    </p>
-
-    <p>
-      Common Expressions of Mathematical Life
-    </p>
-
-    <p>
-      Common Expressions of Mathematical Life
-    </p>
-
+  <main>
+    <h1>Philosophy of mathematics </h1>
+    <p>Text here </p>
   </main>
+
   </body>
 </html>
