--- a/research.html
+++ b/research.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Research</title>
-  </head>
-  <body>
+  
+<head>
+  <meta charset="UTF-8">
+  <title>Research Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
 
 <nav class="navbar">
     <div class="logo">
-    <img src="images/simplelogo.png" alt="MySite Logo">
+    <img src="images/simplelogo.png" alt=" ">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">About</a></li>
@@ -17,13 +21,10 @@
     </ul>
   </nav>
 
-    <h1>
-      Annotated bibliography at the intersection of theology, philosophy, mathematics, and culture
-    </h1>
-
-    <p>
-      Comment
-    </p>
+  <main>
+    <h1>Annotated bibliography at the intersection of theology, philosophy, mathematics, and culture</h1>
+    <p>Text here </p>
+  </main>
 
   </body>
 </html>
