--- a/teaching.html
+++ b/teaching.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
   
-  <head>
-    <title>Teaching</title>
-  </head>
-  
-  <body>
+<head>
+  <meta charset="UTF-8">
+  <title>Teaching Page</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
 
-    <h1>Current and recent teaching</h1>
-    
-    <p>
-      Proofs and Modern Mathematics
-    </p>
+<body>
 
-    <p>
-      Calculus
-    </p>
+<nav class="navbar">
+    <div class="logo">
+    <img src="images/simplelogo.png" alt=" ">
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">About</a></li>
+      <li><a href="philosophy.html">Philosophy</a></li>
+      <li><a href="research.html">Research</a></li>
+      <li><a href="teaching.html">Teaching</a></li>
+    </ul>
+  </nav>
 
-    <p>
-      Geometry
-    </p>
+  <main>
+    <h1>Current and Recent Teaching</h1>
+    <p>Text here </p>
+    <h2>Proofs and Modern Mathematics</h2>
+  </main>
 
-    <p>
-      <a href="index.html">Back to home</a>
-    </p>
   </body>
 </html>
