--- a/teaching.html
+++ b/teaching.html
@@ -22,9 +22,9 @@
   </nav>
 
   <main>
-    <h1>Current and Recent Teaching</h1>
+    <h1>Current and recent teaching</h1>
     <p>Text here </p>
-    <h2>Proofs and Modern Mathematics</h2>
+    <h2>Proofs and modern mathematics</h2>
   </main>
 
   </body>
