--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <title>My Website</title>
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="images/faviconlogo.png">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
   
 <body>
