--- a/teaching.html
+++ b/teaching.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>Teaching Page</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
 
 <body>
