--- a/philosophy.html
+++ b/philosophy.html
@@ -24,8 +24,21 @@
 
   <main>
     <h1>Philosophy of mathematics </h1>
-    <p>Text here </p>
-  </main>
+    <h2>Mathematical structuralism </h2>
+    <p>We can imagine the world as full of things and relations, things as relations and relations as things. 
+      It is a world of being and belonging, of action and effect, order and organization, and space and connection, of transformation and alternation, of consistency and consequence. Things and relations are contrast, repetition, coherence, and proximity. They are patterns. They are in number, and number is in them. As such they participate essentially in and inseparable from the meaning of the world.</p> 
+    <p>Mathematics is the knowledge of patterns. G.H. Hardy writes, “A mathematician, like a painter or a poet, is a maker of patterns.” Pattern uniquely gets to the heart of what mathematics is all about. But whereas painters and poets create patterns of color and word to express all kinds of thoughts and emotions, curiously, mathematicians create and use patterns to express patterns themselves. Henri Poincaré says that “Mathematics is the art of giving the same name to different things.” Mathematicians see through the complexity of the world to discover the simple patterns that weave it all together.</p>
 
+    <h2>Aristotelian imitation </h2>
+    <p>The gift of mathematics is that we are able to recreate these patterns of things and relations in the simpler medium of written words, symbols, and pictures. When we do so, we have not grasped at something beyond the immediate world of our sensations. We have perceived the world, and in response, we have shared in the creation of the world. We receive patterns from the world precisely by returning them to the world. Imitation, not abstraction, is the act of mathematics, and we imitate not to possess but to measure, to name, to embrace and thereby to enter deeper into the world. Imagination is the potential to be present, never a means of escape.</p>
+
+    <h2>Neo-platonic transcendentalism </h2>
+    <p>Yet, in knowing patterns we experience something more, something above and beyond the world, something that transcends time, space, and motion, something eternal, infinite, and immutable. Patterns are good, true, and beautiful, and just like goodness, truth, and beauty, they are real, universal, and relative. In knowing patterns and entering deeper into the world, we paradoxically know the one who is not of this world and enter deeper into the Good, the True, and the Beautiful: into the wisdom of God; into the one through whom all things are made; into the uncreated, incarnate one; into the Lord Jesus Christ; into the Father from whom every family in heaven and on earth derives its name. This is the magic of mathematics. It is a unique reception of the gift of participation in the God in whom we live and move and have our being. </p>
+
+    <h2>Practical philosophy </h2>
+    <p>In the practice of mathematics we explore, create, and explain patterns. We use the patterns that we have found to create new patterns. We piece patterns together to create patterns of patterns. Sometimes we create new patterns only to later recognize them in the world and see that they aren’t so new after all. Other times we experience the world coming into being before our very eyes. There is no pattern that measures all other patterns. Instead, there is always a new pattern to find.</p>
+    <p>Mathematics in this sense is for everyone who has a responsibility to create, to bless, to form, to fill, to keep, to cultivate, to know, and to love. Mathematics is for everyone. It empowers. We all have our mediums and motivations to create, but nothing would ever come into being without an imagination transformed by pattern. In this act of recreation, we ourselves become something new. Moreover, it ennobles. The knowledge of patterns is a taste of what it means to be human in a world awaiting the fullness of humanity in Jesus Christ. But it’s not just for us. Mathematics is a meditation on and a surrender to the word of God in creation. Mathematics is a celebration of the life God has given. Mathematics is a call to consider more carefully the gospel of Jesus Christ, the resurrection of the dead, and the life of the world to come.</p>
+  </main>
   </body>
 </html>
+
