--- a/teaching.html
+++ b/teaching.html
@@ -17,6 +17,7 @@
     <ul class="nav-links">
       <li><a href="index.html">About</a></li>
       <li><a href="philosophy.html">Philosophy</a></li>
+      <li><a href="catechism.html">Catechism</a></li>
       <li><a href="reading.html">Reading</a></li>
       <li><a href="teaching.html">Teaching</a></li>
     </ul>
