--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
   <meta charset="UTF-8">
-  <title>My Website</title>
+  <title>About</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
