--- a/philosophy.html
+++ b/philosophy.html
@@ -18,7 +18,7 @@
 <li><a href="index.html">About</a></li>
 <li><a href="philosophy.html">Philosophy</a></li>
 <li><a href="catechism.html">Catechism</a></li>
-<li><a href="research.html">Research</a></li>
+<li><a href="reading.html">Reading</a></li>
 <li><a href="teaching.html">Teaching</a></li>
 </ul>
 </nav>
