--- a/teaching.html
+++ b/teaching.html
@@ -3,7 +3,7 @@
   
 <head>
   <meta charset="UTF-8">
-  <title>Teaching Page</title>
+  <title>Teaching</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" type="image/png" href="images/favicon.png">
 </head>
