--- a/theology.html
+++ b/theology.html
@@ -29,7 +29,7 @@
 
 
   <iframe
-  src="pdfs/revelation-theology-bibliology.pdf"
+  src="pdfs/revelation_ds.pdf"
   width="100%"
   height="900px"
   style="border: none;">
