--- a/philosophy.html
+++ b/philosophy.html
@@ -16,6 +16,7 @@
 </div>
 <ul class="nav-links">
 <li><a href="index.html">About</a></li>
+<li><a href="theology.html">Theology</a></li>
 <li><a href="philosophy.html">Philosophy</a></li>
 <li><a href="catechism.html">Catechism</a></li>
 <li><a href="reading.html">Reading</a></li>
