--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </nav>
 
   <main>
-    <h1>Welcome to my site</h1>
-    <p>This is my GitHub Pages website.</p>
+    <h1>Under construction</h1>
+    <p>I'm slowly putting together a site to share ideas and post document for my students </p>
   </main>
 
 </body>
