--- a/theology.html
+++ b/theology.html
@@ -26,12 +26,10 @@
 
   <main>
 
-  <iframe
+<iframe
   src="pdfs/revelation_ds.pdf"
-  width="100%"
-  height="900px"
-  style="border: none;">
-  </iframe>
+  class="simple-polished-frame">
+</iframe>
  
   </main>
 
