--- a/theology.html
+++ b/theology.html
@@ -26,10 +26,18 @@
 
   <main>
 
+    <div class="folder">
+  <div class="tab"></div>
+  <div class="body">
+  
+
 <iframe
   src="pdfs/revelation_ds.pdf"
   class="simple-polished-frame">
 </iframe>
+
+     </div>
+</div>
  
   </main>
 
