--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
   <main>
     <h1>Under construction</h1>
-    <p>I'm slowly putting together a site to share ideas and post document for my students </p>
+    <p>I'm slowly putting together a site to share ideas and post document for my students -Elliott </p>
   </main>
 
 </body>
