--- a/teaching.html
+++ b/teaching.html
@@ -26,8 +26,13 @@
 
   <main>
     <h1>Current and recent teaching</h1>
-    <p>Text here </p>
+    
     <h2>Proofs and modern mathematics</h2>
+    
+    <p>Here are the notes for finite group theory. </p>
+
+    <a href="pdfs/Groups and Subgroups.pdf" target="_blank">Groups and Subgroups</a>
+
   </main>
 
   </body>
