--- a/theology.html
+++ b/theology.html
@@ -31,7 +31,9 @@
   <button data-pdf="pdfs/Groups and Subgroups.pdf">PDF 2</button>
 </div>
 
-<iframe class="simple-polished-frame"></iframe>
+<div class="pdf-background">
+  <iframe class="simple-polished-frame"></iframe>
+</div>
 
 <script>
   const buttons = document.querySelectorAll('.pdf-tabs button');
