--- a/theology.html
+++ b/theology.html
@@ -27,8 +27,10 @@
   <main>
 
 <div class="pdf-tabs">
-  <button data-pdf="pdfs/Revelation.pdf">PDF 1</button>
-  <button data-pdf="pdfs/Groups and Subgroups.pdf">PDF 2</button>
+  <button data-pdf="pdfs/Revelation.pdf">Revelation</button>
+  <button data-pdf="pdfs/Groups and Subgroups.pdf">Creation and Humanity</button>
+  <button data-pdf="pdfs/Groups and Subgroups.pdf">Soteriology</button>
+  <button data-pdf="pdfs/Groups and Subgroups.pdf">Ecclesiology</button>
 </div>
 
 <div class="pdf-background">
